# qsopt-ex

./: .editorconfig  .gitignore  .travis.yml  Doxyfile  Makefile  Makefile.am  Makefile.common  Makefile.library  Makefile.template  NEWS.md  README.md  bootstrap  configure.ac  make.conf.in  typenames
contrib/debian/: changelog  control  copyright  qsopt-ex-esolver.install
contrib/fedora/: qsopt_ex.spec
contrib/macports/math/qsopt_ex/: Portfile
esolver/: esolver.c
m4/: README
python/: MANIFEST.in  cgmp.pxd  cqsoptex.pxd  qsoptex.pyx  setup.py  test_qsoptex.py
qsopt_ex/: QSopt_ex.h  QSopt_ex_version.c  QSopt_ex_version.h  allocrus.c  allocrus.h  basis.c  basis.h  bgetopt.c  bgetopt.h  binary.c  binary.h  dheaps_i.c  dheaps_i.h  dstruct.c  dstruct.h  editor.c  editor.h  eg_elist.h  eg_exutil.c  eg_io.c  eg_io.h  eg_lpnum.c  eg_lpnum.dbl.h  eg_macros.c  eg_macros.h  eg_memslab.c  eg_memslab.h  eg_nummacros.h  eg_numutil.c  eg_numutil.h  eg_timer.h  exact.c  except.c  except.h  factor.c  factor.h  fct.c  fct.h  format.c  format.h  (+51 more)
src/: QSopt_ex.h  QSopt_ex_version.c  allocrus.c  allocrus.h  basicdefs.h  basis.c  basis.h  bgetopt.c  binary.c  demo_qs.c  dheaps_i.c  dheaps_i.h  dstruct.c  dstruct.h  editor.c  editor.h  eg_eheap.c  eg_eheap.ex.c  eg_eheap.h  eg_elist.h  eg_exact.h  eg_exutil.h  eg_fp.h  eg_io.c  eg_io.h  eg_lpnum.c  eg_lpnum.dbl.h  eg_lpnum.float128.h  eg_lpnum.fp20.h  eg_lpnum.h  eg_lpnum.int.h  eg_lpnum.int32.h  eg_lpnum.ldbl.h  eg_lpnum.llint.h  eg_lpnum.mpf.h  eg_lpnum.mpq.h  eg_lpnum.mpz.h  eg_macros.c  eg_macros.h  eg_mem.h  (+68 more)
tests/: eg_lpnum_ex.c  eg_sloan.c  ftest.c  solver.c  solver.h  test_qs.c
